--- a/index.html
+++ b/index.html
@@ -1,25 +1,44 @@
+<!DOCTYPE html>
 <html>
+<head>
 <style>
+
+* {
+   scroll-behavior: smooth;
+}
 body {
    background-image: url('pic/gc1.jpg');
    background-size: cover;
    background-position: center;
+   background-repeat: no-repeat;
+   background-attachment: fixed;  
    font-family: Arial, sans-serif;
+   margin-left: auto;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
-   justify-content: center;
-   height: 100vh;
+   height: 100%;
 }
+
 .header {
+   position: sticky; 
+   top: 0; 
+   z-index: 1000; 
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
-   padding: 20px;
+   padding: 5px;
    border-bottom: hidden;
+   background-color: rgba(255, 255, 255, 0.8); 
+   margin: auto;
+}
+
+.logo-container {
+   display: flex;
+   align-items: center;
 }
 
 .logo {
@@ -34,6 +53,20 @@ body {
    color: #333;
    font-size: 12px;
    margin-right: 10px;
+}
+
+.logo2 {
+   width: 60px; 
+   height: 60px; 
+   background-image: url('pic/gcccslogo.png'); 
+   background-size: cover;
+   border-radius: 50%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   color: #333;
+   font-size: 12px;
+   margin-left: auto; 
 }
 
 .nav {
@@ -66,17 +99,16 @@ body {
 
 .hero {
    width: 100%;
-   height: 500px;
+   height: 68vh;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 24px;
-   margin-top: 50px;
 }
 
 .hero-image {
    width: 70%;
-   height: 70%;
+   height: 70%; 
    background-color: none;
    display: flex;
    align-items: center;
@@ -88,7 +120,6 @@ body {
    background-image: url('pic/gcgroup.jpg');
    background-size: cover;
    background-position: center;
-   
 }
 
 .cta {
@@ -118,36 +149,98 @@ h2 {
    color: transparent;
    text-align: center;
    animation: effect 2s linear infinite;
-   }
- 
+}
+
 @keyframes effect {
    0% {
    background: linear-gradient(#008000, #00FF00);
    -webkit-background-clip: text;
    }
- 
+
    100% {
-   background: linear-gradient(#3CE7D7, #000FFF);
+   background: linear-gradient(#008000, #ff8000);
    -webkit-background-clip: text;
    }
-   }
+}
 
+.container {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 100vh; 
+   color: white;
+   font-family: 'Courier New', Courier, monospace;
+   font-size: 20px;
+   text-align: center;
+   line-height: 100%;
+}
+.container a{
+   text-decoration: none;
+   color:#ff8000;
+   text-align: center;
+}
+
+.container div {
+   height: 370px;
+   width: 335px;
+   background-color: rgb(93, 93, 132);
+   margin: 60px;
+   text-align: center;
+   border-radius: 30px;
+}
+
+.herop{
+margin-right: 0;
+padding: 0;
+height: 78vh;
+text-align:center;
+}
+
+.btn{
+   display: flex;
+   align-items: center;
+   padding: 10px 20px;
+   background-color: #333;
+   color: #fff;
+   text-decoration: none;
+   border-radius: 5px;
+}
+.mod1{
+   background-image: url('pic/impic.png');
+   background-size: cover;
+   background-position: center;
+   background-repeat: no-repeat;
+}
+
+.mod2{
+   background-image: url('pic/comppic.jpg');
+   background-size: cover;
+   background-position: center;
+   background-repeat: no-repeat;
+}
+.mod3{
+   background-image: url('pic/hcipic.jpg');
+   background-size: cover;
+   background-position: center;
+   background-repeat: no-repeat;
+}
 </style>
+</head>
 <body>
-   <div class="header">
-       <div class="logo">
-          
+   <div id="home" class="header">
+       <div class="logo-container">
+           <div class="logo"></div>
+           <div class="logo2"></div> 
        </div>
        <ul class="nav">
-           <li><a href="#">Home</a></li>
-           <li><a href="#">About</a></li>
+           <li><a href="#home">Home</a></li>
+           <li><a href="#about">About</a></li>
            <li><a href="#">Help & Support</a></li>
            <li><a href="#">Sign Up</a></li>
        </ul>
        <button class="sign-in">Sign In</button>
    </div>
    <div class="hero">
-      
        <div class="hero-image">
            <div class="hero-text">
                <h2>Welcome to GCScapes</h2>
@@ -155,11 +248,39 @@ h2 {
        </div>
    </div>
    <div class="cta">
-       <button>Button</button>
-       <button>Button</button>
+       <button id="explore-modules">Explore Modules</button>
    </div>
+
+
+   <div id="container" class="container"> 
+      <a href="#mod1">
+          <div class="mod1">INFORMATION MANAGEMENT</div>
+      </a>
+      <a href="#mod2">
+          <div class="mod2">COMPUTER PROGRAMMING</div>
+      </a>
+      <a href="#mod3">
+          <div class="mod3">INTRODUCTION TO HUMAN COMPUTER INTERACTION</div>
+      </a>
+  </div>
+  
+   <div class="hero">
+        <div class="hero-image2">
+            <div class="herop">
+               <h2 id="about">ABOUT</h2>
+                <p><b>GCscape</b></p>
+                <br>
+                <p> is a prototype navigating educational platform that is use to navigates school learnings whether if it's online. This is a combination of in-person and online learning. We find them frequently used in higher education because it's a tool that allows learning to continue even after students have left the classroom. This indicates the primary focus of the prototype. It suggests that the project aims to improve how users interact with and move through educational platforms. This could involve enhancing user interfaces, streamlining access to resources, improving search functionality, or any other aspect related to making these platforms more user-friendly and efficient.</p>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        document.getElementById('explore-modules').addEventListener('click', function() {
+            document.getElementById('container').scrollIntoView({ behavior: 'smooth' });
+        });
+    </script>
+
+
 </body>
-
-
-
-
+</html>
