--- a/index.html
+++ b/index.html
@@ -196,6 +196,10 @@ height: 78vh;
 text-align:center;
 }
 
+p {
+   text-shadow: 2px 2px 2px #000000;
+}
+
 .btn{
    display: flex;
    align-items: center;
