--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@ h2 {
    text-decoration: none;
    color:#ff8000;
    text-align: center;
+   font-weight: bold;
 }
 
 .container div {
@@ -194,6 +195,9 @@ margin-right: 0;
 padding: 0;
 height: 78vh;
 text-align:center;
+color:#d3750b;
+font-family: 'Courier New', Courier, monospace;
+font-weight: bold;
 }
 
 p {
@@ -274,7 +278,7 @@ p {
                <h2 id="about">ABOUT</h2>
                 <p><b>GCscape</b></p>
                 <br>
-                <p> is a prototype navigating educational platform that is use to navigates school learnings whether if it's online. This is a combination of in-person and online learning. We find them frequently used in higher education because it's a tool that allows learning to continue even after students have left the classroom. This indicates the primary focus of the prototype. It suggests that the project aims to improve how users interact with and move through educational platforms. This could involve enhancing user interfaces, streamlining access to resources, improving search functionality, or any other aspect related to making these platforms more user-friendly and efficient.</p>
+                <p><b> is a prototype navigating educational platform that is use to navigates school learnings whether if it's online. This is a combination of in-person and online learning. We find them frequently used in higher education because it's a tool that allows learning to continue even after students have left the classroom. This indicates the primary focus of the prototype. It suggests that the project aims to improve how users interact with and move through educational platforms. This could involve enhancing user interfaces, streamlining access to resources, improving search functionality, or any other aspect related to making these platforms more user-friendly and efficient.</b></p>
             </div>
         </div>
     </div>
